[gd_scene load_steps=3 format=3 uid="uid://cjuouisiu7p13"]

[ext_resource type="Script" uid="uid://m77smrprloli" path="res://scripts/DieFaceUI.gd" id="1_t4ssj"]
[ext_resource type="StyleBox" uid="uid://uu8g77r4fgo7" path="res://gradients/rewardface_stylebox.tres" id="2_1a0jl"]

[node name="Button" type="Button"]
anchors_preset = -1
anchor_right = 0.11111101
anchor_bottom = 0.19753106
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 1
disabled = true
script = ExtResource("1_t4ssj")
metadata/_edit_use_anchors_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="AspectRatioContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_1a0jl")

[node name="CenterContainer" type="CenterContainer" parent="AspectRatioContainer/Panel"]
custom_minimum_size = Vector2(90, 90)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="AspectRatioContainer/Panel/CenterContainer"]
layout_mode = 2

[node name="FaceIndex" type="HBoxContainer" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="FaceIndexLabel" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceIndex"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87, 0.62, 1)
text = "Index "
horizontal_alignment = 1

[node name="FaceIndexValue" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceIndex"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.87, 0.62, 1)
text = "#"
horizontal_alignment = 1

[node name="FaceType" type="HBoxContainer" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FaceTypeLabel" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceType"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Type: "

[node name="FaceTypeValue" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceType"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "default_type"
horizontal_alignment = 2

[node name="FaceValue" type="HBoxContainer" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="FaceValueLabel" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceValue"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Value: "

[node name="FaceValueValue" type="Label" parent="AspectRatioContainer/Panel/CenterContainer/VBoxContainer/FaceValue"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "default_value"
horizontal_alignment = 2
